fix scrolling display issue which was causing overflowing values to be clipped

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,10 @@ main {
     outline: 2px solid silver;
     text-align: right;
     gap: 2px;
+
+    #result, #expression {
+        white-space: nowrap;
+    }
 }
 
 #backspace {
